Grease pencil armature modifier not normalizing weights as expected. #70378

Closed
opened 2019-09-30 07:22:23 +02:00 by Maurizio Memoli · 4 comments

System Information
Operating system: Windows 10
Graphics card: Nvidia GeForce 1080

Blender Version
Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-29 21:43, hash: ff10ff782b, type: Release
Worked: (optional)

Short description of error
The grease pencil armature modifier does not normalize the output weights as expected.
In the mesh Armature modifier If there is a bone who has all the vertices with weight value of 1.0 the other influences get averaged down.
For instance if one vertex has weights: Bone1= 1.0, Bone2= 1.0 the weight gets averaged to Bone1= 0.5, Bone2= 0.5
In the grease pencil modifier it seems like one weight is overriding the other.
In the file attached the grease pencil has two vertex groups:
one has no weights and the other one has weights.

gp_mod_bug_rep.blend
Exact steps for others to reproduce the error
It is possible to experience the bug assigning weights to the vertex group with no weights and see that is completely overriding the influence from the other vertex group.

**System Information** Operating system: Windows 10 Graphics card: Nvidia GeForce 1080 **Blender Version** Broken: version: 2.81 (sub 12), branch: master, commit date: 2019-09-29 21:43, hash: ff10ff782bde, type: Release Worked: (optional) **Short description of error** The grease pencil armature modifier does not normalize the output weights as expected. In the mesh Armature modifier If there is a bone who has all the vertices with weight value of 1.0 the other influences get averaged down. For instance if one vertex has weights: Bone1= 1.0, Bone2= 1.0 the weight gets averaged to Bone1= 0.5, Bone2= 0.5 In the grease pencil modifier it seems like one weight is overriding the other. In the file attached the grease pencil has two vertex groups: one has no weights and the other one has weights. [gp_mod_bug_rep.blend](https://archive.blender.org/developer/F7781157/gp_mod_bug_rep.blend) **Exact steps for others to reproduce the error** It is possible to experience the bug assigning weights to the vertex group with no weights and see that is completely overriding the influence from the other vertex group.

Added subscriber: @maumemoli

Added subscriber: @maumemoli
Antonio Vazquez was assigned by Maurizio Memoli 2019-09-30 07:25:21 +02:00
Antonio Vazquez was unassigned by Maurizio Memoli 2019-10-07 23:33:23 +02:00

Added subscriber: @antoniov

Added subscriber: @antoniov

This issue was referenced by b81939716d

This issue was referenced by b81939716de822b3d35c8c4ae30a9f9b1ea23bbc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Antonio Vazquez self-assigned this 2019-12-03 16:16:46 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#70378
No description provided.